--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "@react-three/fiber": "^8.17.9",
+    "axios": "^1.7.7",
     "next": "14.2.14",
     "node-fetch": "^3.3.2",
     "react": "^18",
