--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@huggingface/inference": "^2.8.1",
+    "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "axios": "^1.7.7",
     "next": "14.2.14",
